--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "homepage": "https://loganbertrand.github.io/react-memory-game/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
